# addons-repo

./: .dockerignore  .env  .gitignore  README.md  docker-compose.yml  example.env  pyproject.toml  secrets.example.yaml  settings.yaml
alembic/versions/: 2025_02_04_0842-a02c851ebd8c_initial.py  2025_02_04_2233-41af6b6e66b8_add_tokens_and_user_addons_count.py  2025_02_11_1917-dfe96eae99f1_add_addon_id_column.py  2025_02_18_0241-2d307f19ba93_change_addon_secret_type_to_string.py  2025_02_18_2245-2001a587ce37_split_addon_into_addon_and_addonversion.py
src/: __init__.py  app.py  error.py  session_holder.py
src/constants/: __init__.py  misc.py  time.py
src/models/: __init__.py  base.py  user.py
src/models/addon/: __init__.py  addon.py  version.py
src/route/: __init__.py  dependencies.py  errors.py  service.py
src/route/addon/: dependencies.py  errors.py  route.py  service.py
src/route/auth/: dependencies.py  errors.py  route.py  schema.py  service.py
src/schema/: __init__.py  addon.py  misc.py  user.py
src/util/: __init__.py  contextlib.py  cryptography.py
tests/: conftest.py
tests/addon/: test_delete.py  test_upload.py
tests/auth/: test_signin.py  test_signup.py
tests/helpers/: users.py
tests/util/: test_string.py
